--- a/drivers/input/misc/Makefile
+++ b/drivers/input/misc/Makefile
@@ -84,3 +84,5 @@ obj-$(CONFIG_INPUT_WM831X_ON)		+= wm831x-on.o
 obj-$(CONFIG_INPUT_XEN_KBDDEV_FRONTEND)	+= xen-kbdfront.o
 obj-$(CONFIG_INPUT_YEALINK)		+= yealink.o
 obj-$(CONFIG_INPUT_IDEAPAD_SLIDEBAR)	+= ideapad_slidebar.o
+obj-$(CONFIG_INPUT_QPNP_POWER_ON_MMI)   += qpnp-power-on-mmi.o
+obj-$(CONFIG_INPUT_FPC1020)							+= fpc_fps_mmi/
