--- a/drivers/video/backlight/Kconfig
+++ b/drivers/video/backlight/Kconfig
@@ -490,6 +490,13 @@ config BACKLIGHT_RAVE_SP
 	help
 	  Support for backlight control on RAVE SP device.
 
+config BACKLIGHT_AW99703
+	tristate "AWINIC aw99703 Backlight driver"
+	depends on I2C
+	help
+	  Support for backlight control on AWINIC aw99703 device.
+
+
 endif # BACKLIGHT_CLASS_DEVICE
 
 endif # BACKLIGHT_LCD_SUPPORT
