configs: enable led drivers.

--- a/arch/arm64/configs/cebu_defconfig
+++ b/arch/arm64/configs/cebu_defconfig
@@ -3080,6 +3080,8 @@ CONFIG_LCD_CLASS_DEVICE=m
 # CONFIG_LCD_OTM3225A is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_GENERIC=y
+CONFIG_BACKLIGHT_AW99703=y
+# CONFIG_BACKLIGHT_KTD3136 is not set
 # CONFIG_BACKLIGHT_PWM is not set
 # CONFIG_BACKLIGHT_PM8941_WLED is not set
 # CONFIG_BACKLIGHT_QCOM_SPMI_WLED is not set
