--- a/arch/arm64/configs/cebu_defconfig
+++ b/arch/arm64/configs/cebu_defconfig
@@ -1992,6 +1992,7 @@ CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_PM8941_PWRKEY is not set
 # CONFIG_INPUT_PM8XXX_VIBRATOR is not set
 CONFIG_INPUT_QPNP_POWER_ON=y
+CONFIG_QPNP_ADAPTIVE_CHARGE=y
 CONFIG_INPUT_QTI_HAPTICS=y
 # CONFIG_INPUT_MMA8450 is not set
 # CONFIG_INPUT_GP2A is not set
