[FIXME] bengal: Enable someone modules
* But this time, for cebu

Signed-off-by: Aseem Athale <athaleaseem@gmail.com>

--- a/arch/arm64/configs/cebu_defconfig
+++ b/arch/arm64/configs/cebu_defconfig
@@ -1494,6 +1494,17 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_MISC_RTSX_USB is not set
 # CONFIG_FPR_FPC is not set
 
+CONFIG_INPUT_AWINIC_HAPTIC=y
+CONFIG_AW8695_HAPTIC=y
+CONFIG_SARSENSOR_SX933X=y
+CONFIG_MOTO_UTAGS=y
+CONFIG_SENSORS_CLASS=y
+CONFIG_MMI_ANNOTATE=y
+CONFIG_MMI_INFO=y
+CONFIG_MOTO_F_USBNET=y
+CONFIG_TZLOG_DUMP=y
+CONFIG_WATCHDOG_CPU_CTX=y
+CONFIG_WATCHDOGTEST=y
 #
 # SCSI device support
 #
@@ -1900,6 +1911,8 @@ CONFIG_JOYSTICK_XPAD_LEDS=y
 # CONFIG_JOYSTICK_PSXPAD_SPI is not set
 # CONFIG_JOYSTICK_PXRC is not set
 # CONFIG_INPUT_TABLET is not set
+
+############ Touchscreen #############
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
@@ -1911,10 +1924,10 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_AUO_PIXCIR is not set
 # CONFIG_TOUCHSCREEN_BU21013 is not set
 # CONFIG_TOUCHSCREEN_BU21029 is not set
-# CONFIG_TOUCHSCREEN_CHIPONE_ICN8318 is not set
-# CONFIG_TOUCHSCREEN_CY8CTMG110 is not set
-# CONFIG_TOUCHSCREEN_CYTTSP_CORE is not set
-# CONFIG_TOUCHSCREEN_CYTTSP4_CORE is not set
+CONFIG_TOUCHSCREEN_CHIPONE_ICN8318=y
+CONFIG_TOUCHSCREEN_CY8CTMG110=y
+CONFIG_TOUCHSCREEN_CYTTSP_CORE=y
+CONFIG_TOUCHSCREEN_CYTTSP4_CORE=y
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
 # CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
 # CONFIG_TOUCHSCREEN_EETI is not set
@@ -1922,7 +1935,7 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_EGALAX_SERIAL is not set
 # CONFIG_TOUCHSCREEN_EXC3000 is not set
 # CONFIG_TOUCHSCREEN_FUJITSU is not set
-# CONFIG_TOUCHSCREEN_GOODIX is not set
+CONFIG_TOUCHSCREEN_GOODIX=y
 # CONFIG_TOUCHSCREEN_HIDEEP is not set
 # CONFIG_TOUCHSCREEN_ILI210X is not set
 # CONFIG_TOUCHSCREEN_S6SY761 is not set
@@ -1964,9 +1977,9 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_ZET6223 is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
 # CONFIG_TOUCHSCREEN_ROHM_BU21023 is not set
-# CONFIG_TOUCHSCREEN_ST is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_TCM is not set
+CONFIG_TOUCHSCREEN_ST=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_TCM=y
 CONFIG_TOUCHSCREEN_FTS=y
 CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch"
 CONFIG_TOUCHSCREEN_NT36XXX=y
@@ -1979,7 +1992,7 @@ CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_PM8941_PWRKEY is not set
 # CONFIG_INPUT_PM8XXX_VIBRATOR is not set
 CONFIG_INPUT_QPNP_POWER_ON=y
-# CONFIG_INPUT_QTI_HAPTICS is not set
+CONFIG_INPUT_QTI_HAPTICS=y
 # CONFIG_INPUT_MMA8450 is not set
 # CONFIG_INPUT_GP2A is not set
 # CONFIG_INPUT_GPIO_BEEPER is not set
@@ -2005,6 +2018,8 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_INPUT_DRV2665_HAPTICS is not set
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
 # CONFIG_RMI4_CORE is not set
+
+##############################################
 
 #
 # Hardware I/O ports
