drivers:misc:awinic: fix state redifinition
This fixes a state redifinition warning while building, in this
Kconfig, INPUT_AWINIC_HAPTIC is a bool, whereas in a sub-folder,
it is redefined as a tristate.

Signed-off-by: Aseem Athale <athaleaseem@gmail.com>

--- a/drivers/misc/awinic/Kconfig
+++ b/drivers/misc/awinic/Kconfig
@@ -3,7 +3,7 @@
 #
 
 menuconfig INPUT_AWINIC_HAPTIC
-	bool "Awinic Haptic"
+	tristate "Awinic Haptic"
 	default n
 	help
 	  Enables Awinic Haptic driver.
