--- a/arch/arm64/configs/cebu_defconfig
+++ b/arch/arm64/configs/cebu_defconfig
@@ -2023,9 +2023,9 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_ST is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_TCM is not set
-CONFIG_TOUCHSCREEN_FOCALTECH_0FLASH_MMI=y
-# CONFIG_TOUCHSCREEN_FTS is not set
-# CONFIG_TOUCHSCREEN_FTS_DIRECTORY is not set
+# CONFIG_TOUCHSCREEN_FOCALTECH_0FLASH_MMI is not set
+CONFIG_TOUCHSCREEN_FTS=y
+CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch"
 CONFIG_TOUCHSCREEN_NT36XXX=y
 # CONFIG_TOUCHSCREEN_HIMAX_CHIPSET is not set
 CONFIG_INPUT_MISC=y
