misc: Import abov SAR MMI overlay driver

--- a/arch/arm64/configs/lineageos_cebu_defconfig
+++ b/arch/arm64/configs/lineageos_cebu_defconfig
@@ -1547,6 +1547,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_ECHO is not set
 # CONFIG_MISC_RTSX_USB is not set
 # CONFIG_FPR_FPC is not set
+CONFIG_ABOV_SAR_MMI_OVERLAY=m
 
 #
 # SCSI device support
