drivers: Add Moto MMI drivers

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -229,7 +229,21 @@ source "drivers/esoc/Kconfig"
 
 source "drivers/sensors/Kconfig"
 
+source "drivers/sensors_class/Kconfig"
+
 source "drivers/gpu/msm/Kconfig"
 
 source "drivers/energy_model/Kconfig"
+
+source "drivers/mmi_annotate/Kconfig"
+
+source "drivers/mmi_info/Kconfig"
+
+source "drivers/moto_f_usbnet/Kconfig"
+
+source "drivers/tzlog_dump/Kconfig"
+
+source "drivers/watchdog_cpu_ctx/Kconfig"
+
+source "drivers/watchdogtest/Kconfig"
 endmenu
