--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -192,3 +192,10 @@ obj-$(CONFIG_UNISYS_VISORBUS)	+= visorbus/
 obj-$(CONFIG_SIOX)		+= siox/
 obj-$(CONFIG_GNSS)		+= gnss/
 obj-$(CONFIG_SENSORS_SSC)	+= sensors/
+obj-$(CONFIG_SENSORS_CLASS)	+= sensors_class/
+obj-$(CONFIG_MMI_ANNOTATE) += mmi_annotate/
+obj-$(CONFIG_MMI_INFO) += mmi_info/
+obj-$(CONFIG_MOTO_USBNET) += moto_f_usbnet/
+obj-$(CONFIG_TZLOG_DUMP) += tzlog_dump/
+obj-$(CONFIG_WATCHDOG_CPU_CTX) += watchdog_cpu_ctx/
+obj-$(CONFIG_WATCHDOGTEST) += watchdogtest/
