cebu: Enable all the recently added modules

--- a/arch/arm64/configs/lineageos_cebu_defconfig
+++ b/arch/arm64/configs/lineageos_cebu_defconfig
@@ -5635,3 +5635,23 @@ CONFIG_ARM64_PTDUMP_CORE=y
 # CONFIG_ARM64_RELOC_TEST is not set
 # CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE is not set
 # CONFIG_CORESIGHT is not set
+#
+CONFIG_CCI_INTF=m
+CONFIG_CHIPONE_TDDI_MMI=m
+CONFIG_TOUCHSCREEN_NOVA_0FLASH_MMI=m
+CONFIG_DTS201A_MMI=m
+CONFIG_MMI_SYS_TEMP=m
+CONFIG_MOTO_UTAG=m
+CONFIG_CHIPONE_FPS_MMI=m
+CONFIG_INPUT_FPC1020=m
+CONFIG_LEDS_AW99703=m
+CONFIG_LEDS_KTD3136=m
+CONFIG_MMI_ANNOTATE=m
+CONFIG_MMI_INFO=m
+CONFIG_MOTO_USBNET=m
+CONFIG_QPNP_ADAPTIVE_CHARGE=m
+CONFIG_QPNP_POWER_ON_MMI=m
+CONFIG_SENSORS_CLASS=m
+CONFIG_TZLOG_DUMP=m
+CONFIG_WATCHDOG_CPU_CTX=m
+CONFIG_WATCHDOGTEST=m
