--- a/arch/arm64/configs/lineageos_cebu_defconfig
+++ b/arch/arm64/configs/lineageos_cebu_defconfig
@@ -1547,7 +1547,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_ECHO is not set
 # CONFIG_MISC_RTSX_USB is not set
 # CONFIG_FPR_FPC is not set
-CONFIG_ABOV_SAR_MMI_OVERLAY=m
+CONFIG_ABOV_MMI_OVERLAY=m
 
 #
 # SCSI device support
@@ -2024,9 +2024,9 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_ST is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_TCM is not set
-# CONFIG_TOUCHSCREEN_FOCALTECH_0FLASH_MMI is not set
-CONFIG_TOUCHSCREEN_FTS=y
-CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch"
+CONFIG_TOUCHSCREEN_FOCALTECH_0FLASH_MMI=m
+#CONFIG_TOUCHSCREEN_FTS is not set
+#CONFIG_TOUCHSCREEN_FTS_DIRECTORY is not set
 CONFIG_TOUCHSCREEN_NT36XXX=y
 # CONFIG_TOUCHSCREEN_HIMAX_CHIPSET is not set
 CONFIG_INPUT_MISC=y
